# llamaCPPManager

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
docs/: TODO.md  design.md  implementation-plan.md  requirements.md  testing.md
gui-macos/: Package.swift
gui-macos/.build/: build.db  plugin-tools.yaml
gui-macos/.build/arm64-apple-macosx/debug/: llamacpp-gui  plugin-tools-description.json
gui-macos/.build/arm64-apple-macosx/debug/Modules/: llamacpp_gui.swiftdoc  llamacpp_gui.swiftmodule  llamacpp_gui.swiftsourceinfo  llamacpp_guiPackageTests.swiftdoc  llamacpp_guiPackageTests.swiftmodule  llamacpp_guiPackageTests.swiftsourceinfo  llamacpp_guiTests.swiftdoc  llamacpp_guiTests.swiftmodule  llamacpp_guiTests.swiftsourceinfo
gui-macos/.build/arm64-apple-macosx/debug/llamacpp-gui.product/: Objects.LinkFileList
gui-macos/.build/arm64-apple-macosx/debug/llamacpp_gui.build/: App.d  App.swiftdeps  (+4 more)
gui-macos/Sources/: App.swift
gui-macos/Tests/: JSONParsingTests.swift
scripts/: run_local_tests.sh
src/llamacpp_manager/: cli.py  config.py  discovery.py  health.py  launchd.py  logs.py  process.py  utils.py
src/llamacpp_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cli_config.py  test_cli_launchd_flags.py  test_cli_start_stop.py  test_config.py  test_discovery_parse.py  test_discovery_status.py  test_ensure_running.py  test_health.py  test_launchd.py  test_launchd_install_uninstall.py  test_logs.py  test_migrate.py  test_ports_and_warnings.py  test_process.py  test_security_and_bincheck.py  test_status.py
(+609 files in other folders)
